<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ie.app.brian_casey_20007693.MainActivity">
    <item
        android:id="@+id/action_shop"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_report"
        android:orderInCategory="100"
        android:title="@string/action_report"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_task"
        android:icon="@drawable/ic_add_circle_white_36dp"
        android:title="@string/action_add"
        app:showAsAction="ifRoom" /> <!--ifRoom dispalys item on the bar-->
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />

</menu>
